# olfrefactor

./: .gitignore  .pre-commit-config.yml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: master.yml  pr.yml
backend/: db.sqlite3  svu.json
backend/backend/: celery.py  settings.py  urls.py
backend/contenu/: __init__.py  admin.py  models.py
backend/contenu/application/: dependancy_injection.py  event_handlers.py  event_services.py  events.py  handlers.py
backend/contenu/application/handlers/: document_events.py  event_bus.py
backend/contenu/data/: Repartition-Regions-Pays-OLF.xlsx
backend/contenu/interfaces/: api.py  serializers.py  views.py
backend/contenu/migrations/: 0001_initial.py  0002_alter_documentdb_options_remove_documentdb_tenant_id.py  0003_documentdb_document_type.py  0004_region_country.py
backend/contenu/tasks/: emails.py  etl.py  logs.py  maintenance.py  upload.py
backend/processing/: admin.py  models.py
backend/processing/application/: chunk_adapter.py  event_services.py
backend/processing/interfaces/: api.py  filters.py  serializers.py  views.py
backend/processing/migrations/: 0001_initial.py  0002_indicatorcategory_indicator.py
backend/processing/semantic/: calibration.py  classifier.py  embeddings.py  normalization.py  pipeline.py  svu_vectorstore.py
backend/processing/tasks/: indexing.py
backend/shared/: enums.py  extraction_status.py  value_objects.py
backend/uploader_and_downloader/: base.py  dropbox_auth.py  dropbox_storage.py  tasks.py  token_repository.py
scripts/: entrypoint.sh  production_data.sh
(+61 files in other folders)
