[project]
name = "olf-backend"
version = "0.1.0"
description = "OLF backend – DDD, event-driven, clean architecture"
readme = "README.md"
requires-python = ">=3.12"

# Dépendances gérées via requirements.txt / uv
dependencies = []

# =========================
# PYTEST
# =========================
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.settings"
django_find_project = true

testpaths = ["backend"]
python_files = ["test_*.py"]

addopts = "-ra --tb=short -p no:warnings"
filterwarnings = [
  "ignore::DeprecationWarning",
]

# IMPORTANT : évite les hacks PYTHONPATH en CI
pythonpath = ["backend"]

# =========================
# FORMAT & LINT
# =========================
[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["backend", "processing", "contenu", "shared"]

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "I", "B"]
ignore = ["E501"]
